Drop maintainership of my recently ill-maintained java ports. I may still look in on them from time to time, but this feels better than to just ignore thme. Free to a good home.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72252 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/commons-codec/Portfile
+++ b/dports/java/commons-codec/Portfile
@@ -6,7 +6,7 @@ name				commons-codec
 version				1.4
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-Codec
