--- a/dports/java/commons-daemon/Portfile
+++ b/dports/java/commons-daemon/Portfile
@@ -7,7 +7,7 @@ version				1.0.2
 license             Apache-2.0
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-Daemon
