--- a/dports/java/commons-httpclient/Portfile
+++ b/dports/java/commons-httpclient/Portfile
@@ -6,7 +6,7 @@ name				commons-httpclient
 version				3.1
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-HttpClient
