--- a/dports/java/commons-lang/Portfile
+++ b/dports/java/commons-lang/Portfile
@@ -6,7 +6,7 @@ name				commons-lang
 version				2.4
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-Lang
