--- a/dports/java/mx4j/Portfile
+++ b/dports/java/mx4j/Portfile
@@ -6,7 +6,7 @@ name				mx4j
 version				3.0.2
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Open Source JMX for Enterprise Computing.
