--- a/dports/java/spring-framework/Portfile
+++ b/dports/java/spring-framework/Portfile
@@ -6,7 +6,7 @@ name			spring-framework
 version			2.5.6.SEC01
 
 categories		java
-maintainers		jberry openmaintainer
+maintainers		nomaintainer
 platforms		darwin
 
 description		Spring application framework for Java
