--- a/dports/java/woodstox/Portfile
+++ b/dports/java/woodstox/Portfile
@@ -6,7 +6,7 @@ name				woodstox
 version				3.2.0
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Woodstox StAX XML parser
