--- a/dports/java/xalanj/Portfile
+++ b/dports/java/xalanj/Portfile
@@ -6,7 +6,7 @@ name				xalanj
 version				2.7.1
 
 categories			java textproc
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Apache Xerces 2 Java XML Parser
