--- a/dports/java/xom/Portfile
+++ b/dports/java/xom/Portfile
@@ -7,7 +7,7 @@ version				1.2.5
 
 categories			java devel textproc
 platforms			darwin
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 supported_archs		noarch
 
 description			A tree-based API for XML processing
