--- a/dports/java/cglib/Portfile
+++ b/dports/java/cglib/Portfile
@@ -7,7 +7,7 @@ epoch			1
 version			2.2
 
 categories		java
-maintainers		jberry openmaintainer
+maintainers		nomaintainer
 platforms		darwin
 
 description		cglib - a code generation library for java byte code.
