--- a/dports/java/commons-beanutils/Portfile
+++ b/dports/java/commons-beanutils/Portfile
@@ -6,7 +6,7 @@ name				commons-beanutils
 version				1.8.2
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-BeanUtils
