--- a/dports/java/commons-cli/Portfile
+++ b/dports/java/commons-cli/Portfile
@@ -7,7 +7,7 @@ version				1.1
 revision			1
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-CLI
