--- a/dports/java/commons-dbcp/Portfile
+++ b/dports/java/commons-dbcp/Portfile
@@ -6,7 +6,7 @@ name				commons-dbcp
 version				1.2.2
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-DBCP
