--- a/dports/java/commons-digester/Portfile
+++ b/dports/java/commons-digester/Portfile
@@ -6,7 +6,7 @@ name				commons-digester
 version				2.0
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-Digester
