--- a/dports/java/commons-el/Portfile
+++ b/dports/java/commons-el/Portfile
@@ -7,7 +7,7 @@ version				1.0
 revision			1
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-Expression Language
