--- a/dports/java/commons-fileupload/Portfile
+++ b/dports/java/commons-fileupload/Portfile
@@ -6,7 +6,7 @@ name				commons-fileupload
 version				1.2.1
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-FileUpload
