--- a/dports/java/commons-io/Portfile
+++ b/dports/java/commons-io/Portfile
@@ -6,7 +6,7 @@ name				commons-io
 version				1.4
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-IO
