--- a/dports/java/commons-launcher/Portfile
+++ b/dports/java/commons-launcher/Portfile
@@ -6,7 +6,7 @@ name				commons-launcher
 version				1.1
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-Launcher
