--- a/dports/java/commons-modeler/Portfile
+++ b/dports/java/commons-modeler/Portfile
@@ -6,7 +6,7 @@ name				commons-modeler
 version				2.0.1
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta Commons-Modeler
