--- a/dports/java/commons-pool/Portfile
+++ b/dports/java/commons-pool/Portfile
@@ -6,7 +6,7 @@ name			commons-pool
 version			1.5.4
 
 categories		java
-maintainers		jberry openmaintainer
+maintainers		nomaintainer
 platforms		darwin
 
 description		Jakarta Commons-Pool
