--- a/dports/java/dom4j/Portfile
+++ b/dports/java/dom4j/Portfile
@@ -7,7 +7,7 @@ version				1.6.1
 revision			1
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			XML, XPATH, and XSLT support for Java.
