--- a/dports/java/ehcache/Portfile
+++ b/dports/java/ehcache/Portfile
@@ -6,7 +6,7 @@ name				ehcache
 version				1.1
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Ehcache is a pure Java, in-process object cache.
