--- a/dports/java/hibernate3/Portfile
+++ b/dports/java/hibernate3/Portfile
@@ -6,7 +6,7 @@ name				hibernate3
 version				3.2.5.ga
 
 categories			java databases
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Hibernate ORM for Java.
