--- a/dports/java/jakarta-bcel/Portfile
+++ b/dports/java/jakarta-bcel/Portfile
@@ -6,7 +6,7 @@ name				jakarta-bcel
 version				5.2
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta BCEL -- Java Byte Code Engineering Library
