--- a/dports/java/jakarta-oro/Portfile
+++ b/dports/java/jakarta-oro/Portfile
@@ -6,7 +6,7 @@ name				jakarta-oro
 version				2.0.8
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta ORO
