--- a/dports/java/jakarta-regexp/Portfile
+++ b/dports/java/jakarta-regexp/Portfile
@@ -6,7 +6,7 @@ name           		jakarta-regexp
 version         	1.5
 
 categories      	java
-maintainers     	jberry openmaintainer
+maintainers     	nomaintainer
 platforms       	darwin
 
 description     	Jakarta Regular Expressions Parser.
