--- a/dports/java/jakarta-taglibs-standard-11/Portfile
+++ b/dports/java/jakarta-taglibs-standard-11/Portfile
@@ -7,7 +7,7 @@ version				1.1.2
 revision			1
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Jakarta JSP Standard Tag Library (JSTL) v1.1
