--- a/dports/java/maven/Portfile
+++ b/dports/java/maven/Portfile
@@ -6,7 +6,7 @@ name            	maven
 version         	1.0.2
 
 categories      	java devel
-maintainers     	jberry openmaintainer
+maintainers     	nomaintainer
 platforms       	darwin
 
 description    		A java-based build and project management environment.
