--- a/dports/java/mysql-connector-java/Portfile
+++ b/dports/java/mysql-connector-java/Portfile
@@ -8,7 +8,7 @@ license             GPL-2
 set branch          [join [lrange [split ${version} .] 0 1] .]
 
 categories			java
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			MySQL Official JDBC connector for MySQL database.
