--- a/dports/java/servlet23-api/Portfile
+++ b/dports/java/servlet23-api/Portfile
@@ -7,7 +7,7 @@ epoch			20061005
 version			1
 
 categories		java
-maintainers		jberry openmaintainer
+maintainers		nomaintainer
 platforms		darwin
 
 description		Java Servlet API 2.3 and JSP 1.2 API.
