--- a/dports/java/servlet24-api/Portfile
+++ b/dports/java/servlet24-api/Portfile
@@ -6,7 +6,7 @@ name			servlet24-api
 version			5.5.28
 
 categories		java
-maintainers		jberry openmaintainer
+maintainers		nomaintainer
 platforms		darwin
 
 description		Java Servlet 2.4 and JSP 2.0 APIs.
