--- a/dports/java/servlet25-api/Portfile
+++ b/dports/java/servlet25-api/Portfile
@@ -6,7 +6,7 @@ name                    servlet25-api
 version                 6.0.26
 
 categories              java
-maintainers             jberry blair openmaintainer
+maintainers             blair openmaintainer
 platforms               darwin
 
 description             Java Servlet 2.5 and JSP 2.1 APIs.
