--- a/dports/java/struts/Portfile
+++ b/dports/java/struts/Portfile
@@ -6,7 +6,7 @@ name           		struts
 version         	1.2.7
 
 categories      	java
-maintainers     	jberry openmaintainer
+maintainers     	nomaintainer
 platforms       	darwin
 
 description     	Apache Struts Framework.
