--- a/dports/java/tomcat-native/Portfile
+++ b/dports/java/tomcat-native/Portfile
@@ -7,7 +7,7 @@ version				1.1.20
 revision        1
 
 categories			java www
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Tomcat 5 HTTP Server native library support.
