--- a/dports/java/xercesj/Portfile
+++ b/dports/java/xercesj/Portfile
@@ -6,7 +6,7 @@ name				xercesj
 version				2.9.1
 
 categories			java textproc
-maintainers			jberry openmaintainer
+maintainers			nomaintainer
 platforms			darwin
 
 description			Apache Xerces 2 Java XML Parser
