libcanberra: update to version 0.26, license.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72253 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/libcanberra/Portfile
+++ b/dports/audio/libcanberra/Portfile
@@ -4,7 +4,8 @@
 PortSystem          1.0
 
 name                libcanberra
-version             0.25
+version             0.26
+license             LGPLv2.1+
 categories          audio devel
 maintainers         nomaintainer
 description         XDG sound theme and naming implementation
@@ -15,9 +16,9 @@ homepage            http://0pointer.de/lennart/projects/libcanberra/
 platforms           darwin
 master_sites        ${homepage}
 
-checksums           md5     d7a158d22d0b44fb2a67aadae74e28ab \
-                    sha1    cb86b88af99936134929e120b2a8d55466de1d0a \
-                    rmd160  eb05114133638f5e27a237da6ea74f64de1b4d26
+checksums           md5     ee2c66ada7c851a4e7b6eb1682285a24 \
+                    sha1    31a1cb8757e5da39b4cdc06e523d011578d7a3e3 \
+                    rmd160  f58fc2cfa4b35f6a6b2577057b969977f7de3b5d
 
 depends_build       port:pkgconfig
 depends_lib         port:gstreamer \
