--- a/dports/python/py-xmldiff/Portfile
+++ b/dports/python/py-xmldiff/Portfile
@@ -16,7 +16,7 @@ long_description	xmldiff is a python tool that figures out the \
 				work either with XML files or DOM trees
 
 homepage		http://www.logilab.org/projects/xmldiff/
-master_sites	ftp://ftp.logilab.org/pub/xmldiff/
+master_sites	http://ftp.logilab.org/pub/xmldiff/
 distname		xmldiff-${version}
 checksums		md5 bc1e184e45ce7f9c6beedda76fbeaa16 \
 				sha1 eed3a15496df1e892c0363273da67f0532a716a7 \
