py-xmldiff: fix livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@72257 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py-xmldiff/Portfile
+++ b/dports/python/py-xmldiff/Portfile
@@ -29,3 +29,7 @@ post-destroot	{
 		doc/API.html doc/API.txt doc/HELP.html doc/HELP.txt \
 		${destroot}${prefix}/share/doc/${name}
 }
+
+livecheck.type	regex
+livecheck.url	[lindex ${master_sites} 0]
+livecheck.regex	xmldiff-(\[0-9.\]+)${extract.suffix}
