tomcat6: Add myself as a maintainer.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72273 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/tomcat6/Portfile
+++ b/dports/java/tomcat6/Portfile
@@ -7,7 +7,7 @@ name				tomcat6
 version				6.0.29
 
 categories			java www
-maintainers			ricci openmaintainer
+maintainers			ricci blair openmaintainer
 platforms			darwin
 
 description			Tomcat 6 HTTP Server and Java Servlet Container.
