--- a/dports/java/maven2/Portfile
+++ b/dports/java/maven2/Portfile
@@ -3,70 +3,74 @@
 
 PortSystem 1.0
 
-name            	maven2
-version         	2.2.1
+name            maven2
+version         2.2.1
 
-categories      	java devel
-maintainers     	kickstyle.net:gk5885
-platforms       	darwin
+categories      java devel
+maintainers     kickstyle.net:gk5885
+platforms       darwin
 
-description    		A java-based build and project management environment.
-long_description	Maven is a Java project management and project comprehension \
-				tool. Maven is based on the concept of a project object model (POM) \
-				in that all the artifacts produced by Maven are a result of consulting \
-				a well defined model for your project. Builds, documentation, source \
-				metrics, and source  cross-references are all controlled by your POM.  \
-				Maven 2.0 is a complete rewrite of Maven 1.0 and as such is better organized, \
-				faster and easier to use.
-homepage		http://maven.apache.org/
+description    	A java-based build and project management environment.
+long_description \
+                Maven is a Java project management and project \
+		comprehension tool.  Maven is based on the \
+		concept of a project object model (POM) in that	\
+		all the artifacts produced by Maven are a result \
+                of consulting a well defined model for your \
+                project.Builds, documentation, source metrics, \
+                and source cross-references are all controlled by \
+                your POM.  Maven 2.0 is a complete rewrite of \
+                Maven 1.0 and as such is better organized, faster \
+		and easier to use.
+		
+homepage        http://maven.apache.org/
 
-master_sites		apache:maven/binaries
-distname		apache-maven-${version}-bin
-worksrcdir		apache-maven-${version}
-use_bzip2		yes
-checksums           md5     c581a15cb0001d9b771ad6df7c8156f8 \
-                    sha1    47ac0417a200cbc6d1b967d6b7c6ae1138e9e3e0 \
-                    rmd160  25d523d3dc86cf4695b0e343cf0f6e58ea8a54e3
+master_sites    apache:maven/binaries
+distname        apache-maven-${version}-bin
+worksrcdir      apache-maven-${version}
+use_bzip2       yes
+checksums       md5    c581a15cb0001d9b771ad6df7c8156f8 \
+                sha1   47ac0417a200cbc6d1b967d6b7c6ae1138e9e3e0 \
+                rmd160 25d523d3dc86cf4695b0e343cf0f6e58ea8a54e3
 
+depends_build	bin:java:kaffe
 
-depends_build		bin:java:kaffe
-
-use_configure		no
-universal_variant	no
-use_bzip2		yes
+use_configure   no
+universal_variant no
+use_bzip2       yes
 
 # Source builds of maven are not possible. So, the default build is a binary
 # install of the jars.
-build.cmd		true
+build.cmd	true
 
 destroot {
-	# Create the target java directory exists
-	xinstall -m 755 -d ${destroot}${prefix}/share/java/${name}
-	
-	# Copy over the needed elements of our directory tree
-	file copy \
-		${worksrcpath}/bin \
-		${worksrcpath}/boot \
-		${worksrcpath}/conf \
-		${worksrcpath}/lib \
-		${destroot}${prefix}/share/java/${name}
-		
-	# Remove extraneous bat files
-	foreach f [glob -directory ${destroot}${prefix}/share/java/${name}/bin *.bat] {
-		file delete $f
-	}
-	
-	# Fix permissions on shell scripts
-	foreach f { maven install_repo.sh } {
-		if [file exists ${destroot}${prefix}/share/java/${name}/bin/$f] {
-			file attributes ${destroot}${prefix}/share/java/${name}/bin/$f -permissions +x
-		}
-	}
-	
-	# Symlink maven into the bin directory
-	system "cd ${destroot}${prefix}/bin && ln -s ${prefix}/share/java/${name}/bin/mvn"
+        # Create the target java directory exists
+        xinstall -m 755 -d ${destroot}${prefix}/share/java/${name}
+        
+        # Copy over the needed elements of our directory tree
+        file copy \
+                ${worksrcpath}/bin \
+                ${worksrcpath}/boot \
+                ${worksrcpath}/conf \
+                ${worksrcpath}/lib \
+                ${destroot}${prefix}/share/java/${name}
+                
+        # Remove extraneous bat files
+        foreach f [glob -directory ${destroot}${prefix}/share/java/${name}/bin *.bat] {
+                file delete $f
+        }
+        
+        # Fix permissions on shell scripts
+        foreach f { maven install_repo.sh } {
+                if [file exists ${destroot}${prefix}/share/java/${name}/bin/$f] {
+                        file attributes ${destroot}${prefix}/share/java/${name}/bin/$f -permissions +x
+                }
+        }
+        
+        # Symlink maven into the bin directory
+        system "cd ${destroot}${prefix}/bin && ln -s ${prefix}/share/java/${name}/bin/mvn"
 }
 
-livecheck.type		regex
-livecheck.url		${homepage}download.html
-livecheck.regex		apache-maven-(\[0-9.\]+)-bin\\.tar
+livecheck.type  regex
+livecheck.url   ${homepage}download.html
+livecheck.regex apache-maven-(\[0-9.\]+)-bin\\.tar
