maven2: Use relative instead of absolute symbolic links.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72278 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/maven2/Portfile
+++ b/dports/java/maven2/Portfile
@@ -67,7 +67,7 @@ destroot {
         }
         
         # Symlink maven into the bin directory
-        system "cd ${destroot}${prefix}/bin && ln -s ${prefix}/share/java/${name}/bin/mvn"
+        system "cd ${destroot}${prefix}/bin && ln -s ../share/java/${name}/bin/mvn"
 }
 
 livecheck.type  regex
