maven2: Add a ${prefix}/bin/mvn2 symlink for consistency with a maven3 port.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72279 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/maven2/Portfile
+++ b/dports/java/maven2/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            maven2
 version         2.2.1
+revision        1
 
 categories      java devel
 maintainers     kickstyle.net:gk5885
@@ -68,6 +69,7 @@ destroot {
         
         # Symlink maven into the bin directory
         system "cd ${destroot}${prefix}/bin && ln -s ../share/java/${name}/bin/mvn"
+        system "cd ${destroot}${prefix}/bin && ln -s ../share/java/${name}/bin/mvn mvn2"
 }
 
 livecheck.type  regex
