boost: allow building with ccache/distcc; closes #26268
git-svn-id: https://svn.macports.org/repository/macports/trunk@72284 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/boost/Portfile
+++ b/dports/devel/boost/Portfile
@@ -33,9 +33,25 @@ depends_lib     port:zlib \
                 port:bzip2
 
 configure {
+
     reinplace -E "s|-install_name \"|&${prefix}/lib/|" \
         ${worksrcpath}/tools/build/v2/tools/darwin.jam
-    write_jam "using darwin : : ${configure.cxx} ;"
+        
+    # Copied from portconfigure.tcl (modified below)
+    # Set pre-compiler filter to use (ccache/distcc), if any.
+    if {[tbool configure.ccache] && [tbool configure.distcc]} {
+        set filter "ccache "
+        # Modified from portconfigure.tcl
+        ui_msg "Warning: boost does not support distcc with ccache"
+    } elseif {[tbool configure.ccache]} {
+        set filter "ccache "
+    } elseif {[tbool configure.distcc]} {
+        set filter "distcc "
+    } else {
+        set filter ""
+    }
+    write_jam "using darwin : : ${filter}${configure.cxx} ;"
+
 }
 
 build.cmd       bjam
