--- a/dports/lang/llvm-gcc42/Portfile
+++ b/dports/lang/llvm-gcc42/Portfile
@@ -3,8 +3,7 @@
 PortSystem 1.0
 
 name                    llvm-gcc42
-version                 2.7
-revision                0
+version                 2.8
 categories              lang
 platforms               darwin
 license                 GPLv2+
@@ -22,11 +21,10 @@ master_sites            ${homepage}releases/${version}/
 distname                llvm-gcc-4.2-${version}.source
 extract.suffix          .tgz
 
-checksums               md5     c5033005ceac1988b7cdc908445090f0 \
-                        sha1    aaf466efa41e95014d51a2f8a60ad3b7771c1829 \
-                        rmd160  523edd94ece00caaaa3ff2399f3c0b044b50f432
+checksums               md5     e5b0569f5f018086c62201d87e161154 \
+                        sha1    58fba3ddddb9c69b345c8afa6c699d9d9d13f551 \
+                        rmd160  305f4157b16912831b2b897b09a55fc2405bcc0c
 
-# gmp and mpfr are not universal
 universal_variant       no
 
 depends_lib             port:llvm port:gmp port:mpfr port:libiconv
@@ -38,19 +36,13 @@ post-extract {
 }
 
 # the generated compiler doesn't accept -arch
-if {[info exists build_arch] && ${os.platform} == "darwin"} {
-    configure.cc_archflags
-    configure.cxx_archflags
-    configure.objc_archflags
-    if {${build_arch} == "i386" } {
-        configure.pre_args-append --host=i686-apple-darwin${os.major}
-    } else {
-        configure.pre_args-append --host=${build_arch}-apple-darwin${os.major}
-    }
-}
+configure.cc_archflags
+configure.cxx_archflags
+configure.objc_archflags
+configure.ld_archflags
 
-configure.cmd           ../llvm-gcc-4.2-${version}.source/configure
-configure.args          --enable-llvm=${prefix}/lib/llvm/obj \
+configure.cmd           ../${distname}/configure
+configure.args          --enable-llvm=${prefix} \
                         --enable-languages=c,c++,objc,obj-c++,fortran \
                         --libdir=${prefix}/lib/${name} \
                         --includedir=${prefix}/include/${name} \
@@ -61,10 +53,8 @@ configure.args          --enable-llvm=${prefix}/lib/llvm/obj \
                         --disable-nls \
                         --program-prefix=llvm- \
                         --program-suffix=-4.2 \
-                        --with-gxx-include-dir=/usr/include/c++/4.2.1 \
                         --with-gmp=${prefix} \
                         --with-mpfr=${prefix} \
-                        --with-slibdir=/usr/lib \
                         --with-build-time-tools=/usr/bin
 
 build.target	        bootstrap
@@ -74,11 +64,6 @@ destroot.target	        install install-info-host
 post-destroot {
         system "cd ${destroot}${prefix}/bin/ && ln -s llvm-gcc-4.2 llvm-gcc"
         system "cd ${destroot}${prefix}/bin/ && ln -s llvm-g++-4.2 llvm-g++"
-
-        # dont install slibs outside of ${prefix}
-        foreach f [glob -nocomplain ${destroot}/usr/lib/*] {
-            file rename $f ${destroot}${prefix}/lib/${name}/
-        }
 
         file delete -force ${destroot}${prefix}/share/man/man7 \
             ${destroot}${prefix}/share/info
@@ -91,13 +76,27 @@ post-destroot {
         xinstall -m 444 ${filespath}/mp-llvm-gcc42 ${destroot}${prefix}/etc/select/gcc/
 }
 
-platform darwin 9 {
-        configure.args-delete --with-gxx-include-dir=/usr/include/c++/4.2.1
-        configure.args-append --with-gxx-include-dir=/usr/include/c++/4.0.0
-}
-
 platform darwin {
     depends_run-append  port:ld64
+
+    post-extract {
+        system "rm -rf ${worksrcpath}/libstdc++-v3"
+    }
+
+    if {${build_arch} == "i386" } {
+        configure.pre_args-append --host=i686-apple-darwin${os.major}
+    } else {
+        configure.pre_args-append --host=${build_arch}-apple-darwin${os.major}
+    }
+
+    if {${os.major} < 10} {
+        configure.args-append --with-gxx-include-dir=/usr/include/c++/4.0.0
+    } else {
+        configure.args-append --with-gxx-include-dir=/usr/include/c++/4.2.1
+    }
+
+    configure.args-append --with-slibdir=/usr/lib
+
     post-destroot {
         if {${build_arch} == "i386" } {
             file mkdir ${destroot}${prefix}/lib/llvm-gcc42/i686-apple-darwin${os.major}/4.2.1
@@ -106,15 +105,14 @@ platform darwin {
             file mkdir ${destroot}${prefix}/lib/llvm-gcc42/${build_arch}-apple-darwin${os.major}/4.2.1
             ln -s ../../../../bin/ld ${destroot}${prefix}/lib/llvm-gcc42/${build_arch}-apple-darwin${os.major}/4.2.1/ld
         }
-    }
-}
 
-variant libgcc_s \
-        description "Install and use the libgcc_s libraries provided by gcc instead of those provided by the system. \
-        This introduces a linker dependency in all binaries built for 10.4 and 10.5 targets using this compiler." {
-        configure.args-delete --with-slibdir=/usr/lib
+        # dont install slibs outside of ${prefix}
+        foreach f [glob -nocomplain ${destroot}/usr/lib/*] {
+            file rename $f ${destroot}${prefix}/lib/${name}/
+        }
+    }
 }
 
 livecheck.type	regex
 livecheck.url   ${homepage}releases/
-livecheck.regex {'(\d+(?:\.\d+)*)'}
+livecheck.regex {'(\d+\.\d+)'}
