pike: always depend on bzip2 since the variant just adds a dependency and there seems to be no configure flag to turn off bzip2 support
git-svn-id: https://svn.macports.org/repository/macports/trunk@72290 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/pike/Portfile
+++ b/dports/lang/pike/Portfile
@@ -26,12 +26,7 @@ checksums        md5 3ba03096741d6df839d32a940f4a865c \
 
 patchfiles       patch-Request.pike
 
-depends_lib      port:zlib port:gmp port:nettle
-
-
-variant bzip2 description {Bzip2 support for Pike} {
-    depends_lib-append port:bzip2
-}
+depends_lib      port:bzip2 port:zlib port:gmp port:nettle
 
 variant image description {Images (JPEG, PNG, GIF, TIFF) support for Pike} {
     configure.args-append --with-jpeglib --with-gif --with-tifflib
