pmd: add missing dependency on junit (#16649)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72291 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/pmd/Portfile
+++ b/dports/java/pmd/Portfile
@@ -20,7 +20,7 @@ distname         ${name}-src-${version}
 checksums        md5 2ddefa2c0aa890693e2ce07a548b189f
 use_zip          yes
 
-depends_build    bin:ant:apache-ant
+depends_build    bin:ant:apache-ant port:junit
 
 worksrcdir       ${name}-${version}
 
@@ -34,6 +34,8 @@ use_configure  no
 build.cmd      ant
 build.target   dist
 build.dir      ${worksrcpath}/bin
+
+build.args     -lib ${prefix}/share/java/junit.jar
 
 destroot {
     # Install the wrapper script
