--- a/dports/devel/bashdb/Portfile
+++ b/dports/devel/bashdb/Portfile
@@ -3,7 +3,7 @@
 PortSystem      1.0
 
 name            bashdb
-version         4.0-0.4
+version         4.1-0.4
 categories      devel
 maintainers     aecollins1
 description     Debugger for scripts written in BASH
@@ -20,10 +20,13 @@ platforms       darwin
 
 master_sites    sourceforge
 
-checksums       md5     39c4c64ede591ebe3bd05ba2334d83ae \
-                sha1    b249fcf3c7d62a2634c0c05c65dec10b99f5e600 \
-                rmd160  35f71e1beb6bf01a5defdea5cdb218a321a00529
-                
+checksums       md5     547aa128875127f2bbd5d564cbb10ff1 \
+                sha1    339f5d697c97563cf11bd5c416ebb804a1e9b293 \
+                rmd160  cc7ba773567b313bd8c9f393a9eb4feedb585deb \
+                sha256  ed92cd88f23b2f644e2c19cc6807d42181d42d8714b7e4a4cb15cb5158742322
+
+depends_lib     port:bash
+
 test.run        yes
 test.target     check
 
