--- a/dports/shells/bash/Portfile
+++ b/dports/shells/bash/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name                bash
 set bash_version    4.1
-set bash_patchlevel 7
+set bash_patchlevel 9
 version             ${bash_version}.${bash_patchlevel}
 revision            1
 distname            ${name}-${bash_version}
@@ -43,7 +43,9 @@ checksums-append \
     bash41-004 sha1 469dff697b7ac1c157dcc625d9333a1dcdb88ae2 \
     bash41-005 sha1 c8400b7d3ddb2f8c7159bbbd238b22fc10504e12 \
     bash41-006 sha1 9707fc6a92d4de907016584074187c1aaca25f2a \
-    bash41-007 sha1 614e46128d6f9867132b31765f60a514b395ae43
+    bash41-007 sha1 614e46128d6f9867132b31765f60a514b395ae43 \
+    bash41-008 sha1 f4e618e4d4c01b2b57cdc933e648f27f82b0157a \
+    bash41-009 sha1 d874f61674144060a7788665f1531fe21167c7c2
 
 depends_build           bin:grep:grep \
                         bin:bison:bison
