pure-devel: apply an upstream fix to properly detect when the daylight variable is absent in time.h, thus allowing the build to succeed on Tiger
git-svn-id: https://svn.macports.org/repository/macports/trunk@72296 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/pure-devel/Portfile
+++ b/dports/lang/pure-devel/Portfile
@@ -51,6 +51,8 @@ depends_lib \
 depends_run \
     path:bin/w3m:w3m
 
+patchfiles              patch-acinclude.m4.diff
+
 platform macosx {
     depends_run-replace s|path:bin/w3m:w3m|path:bin/openbrowser:openbrowser|
     patchfiles-append   patch-openbrowser.diff
