pure: apply an upstream fix to properly detect when the daylight variable is absent in time.h, thus allowing the build to succeed on Tiger
git-svn-id: https://svn.macports.org/repository/macports/trunk@72297 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/pure/Portfile
+++ b/dports/lang/pure/Portfile
@@ -29,10 +29,12 @@ long_description \
     The libraries are licensed under LGPLv3, the interpreter is GPLv3, and \
     the examples are BSD-licensed.
 
+use_autoreconf          yes
+
 checksums               sha1    dd7199091b254be57704ea0fff730baf8c32ab45 \
                         rmd160  4c5c9920e5210bc6503885fc45366fe85bedf083
 
-depends_build \
+depends_build-append \
     path:bin/llvm-config:llvm
 
 depends_lib \
@@ -43,6 +45,8 @@ depends_lib \
 
 depends_run \
     path:bin/w3m:w3m
+
+patchfiles              patch-acinclude.m4.diff
 
 platform macosx {
     depends_run-replace s|path:bin/w3m:w3m|path:bin/openbrowser:openbrowser|
