--- a/dports/net/whois/Portfile
+++ b/dports/net/whois/Portfile
@@ -14,8 +14,7 @@ PortGroup                   archcheck 1.0
 
 name                        whois
 conflicts                   bahamut ripe-whois
-version                     5.0.7
-revision                    1
+version                     5.0.8
 categories                  net
 maintainers                 ryandesign
 homepage                    http://www.linux.it/~md/software/
@@ -29,9 +28,8 @@ long_description            whois is an improved whois client that follows the \
 
 master_sites                http://ftp.debian.org/debian/pool/main/w/${name}/
 
-checksums                   md5     bab31f39eb4328b489027091b964c174 \
-                            sha1    3c7c254001ec5edd01bc89379fc0b6f7f0f6f579 \
-                            rmd160  3540b41d61e760dd29c58291e412246fe9acdcb1
+checksums                   sha1    b8328d1a05f2910f535f49fd16c567ca5073762d \
+                            rmd160  d2f13d40ef40459ec900e7c6073b6b0d2163d93b
 
 distname                    ${name}_${version}
 worksrcdir                  ${name}-${version}
