winetricks: update to 20101008; see http://www.winehq.org/pipermail/wine-devel/2010-October/087231.html
git-svn-id: https://svn.macports.org/repository/macports/trunk@72300 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/winetricks/Portfile
+++ b/dports/x11/winetricks/Portfile
@@ -4,7 +4,7 @@
 PortSystem              1.0
 
 name                    winetricks
-version                 20100917
+version                 20101008
 categories              x11
 maintainers             ryandesign
 homepage                http://code.google.com/p/winezeug/
@@ -26,9 +26,8 @@ long_description        ${name} can help you prepare your system for Windows \
                         systems have all the needed redistributable runtime \
                         libraries or fonts.
 
-checksums               md5     f5823c765572a90df2b52b476915cd59 \
-                        sha1    ad22e0e0b5a7fd19ef5883052b8538a665693682 \
-                        rmd160  ef2d5bc89ed4200bd5e562d647c69d3d27df6d98
+checksums               sha1    4392d8af5bf0cedc0baf172a31feae65f9fd06de \
+                        rmd160  22146323c1d8be5c44dd10e20e6dc0168ce7aa6a
 
 depends_run             path:bin/xmessage:xmessage \
                         path:bin/wine:wine \
