wesnoth: update to 1.8.5; see #26741 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72301 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/games/wesnoth/Portfile
+++ b/dports/games/wesnoth/Portfile
@@ -3,7 +3,7 @@
 PortSystem              1.0
 
 name                    wesnoth
-version                 1.8.4
+version                 1.8.5
 categories              games
 platforms               darwin
 maintainers             nodetwo.com:jordan
@@ -24,8 +24,8 @@ long_description        Battle for Wesnoth is a fantasy turn-based strategy \
                         levels, and are carried over from one scenario to the \
                         next campaign.
 
-checksums               sha1    30b82e06523f9a82b770a6fc4e2d4251bd358eca \
-                        rmd160  86b6f6ca39cf87134d89e989ed20840836aeac28
+checksums               sha1    22c6cc10dc7172daf636158dba0acac35f538597 \
+                        rmd160  c2a6a9f094b862ef274838fd062c5d961f97c261
 
 depends_lib             port:xorg-libX11 \
                         port:boost \
@@ -43,8 +43,7 @@ depends_lib             port:xorg-libX11 \
                         port:gettext \
                         port:zlib
 
-patchfiles              patch-configure.ac.diff \
-                        patch-m4-boost.m4.diff
+patchfiles              patch-m4-boost.m4.diff
 
 use_autoreconf          yes
 
