Reduce permissions on some files and directories.  Partially resolves #25656.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72308 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/maven2/Portfile
+++ b/dports/java/maven2/Portfile
@@ -5,7 +5,7 @@ PortSystem 1.0
 
 name            maven2
 version         2.2.1
-revision        1
+revision        2
 
 categories      java devel
 maintainers     kickstyle.net:gk5885
@@ -65,6 +65,13 @@ destroot {
                 if [file exists ${destroot}${prefix}/share/java/${name}/bin/$f] {
                         file attributes ${destroot}${prefix}/share/java/${name}/bin/$f -permissions +x
                 }
+        }
+
+        # Reduce the permissions on the distribution files.
+        file attributes ${destroot}${prefix}/share/java/${name}/conf -permissions 0755
+        file attributes ${destroot}${prefix}/share/java/${name}/conf/settings.xml -permissions 0644
+        foreach f [glob -directory ${destroot}${prefix}/share/java/${name}/lib *.jar] {
+                file attributes $f -permissions 0644
         }
         
         # Symlink maven into the bin directory
