Set and use ${mavendir} to make the port shorter and easier to read.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72309 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/maven2/Portfile
+++ b/dports/java/maven2/Portfile
@@ -44,8 +44,10 @@ universal_variant no
 build.cmd       true
 
 destroot {
+        set mavendir ${destroot}${prefix}/share/java/${name}
+
         # Create the target java directory exists
-        xinstall -m 755 -d ${destroot}${prefix}/share/java/${name}
+        xinstall -m 755 -d ${mavendir}
         
         # Copy over the needed elements of our directory tree
         file copy \
@@ -53,24 +55,24 @@ destroot {
                 ${worksrcpath}/boot \
                 ${worksrcpath}/conf \
                 ${worksrcpath}/lib \
-                ${destroot}${prefix}/share/java/${name}
+                ${mavendir}
                 
         # Remove extraneous bat files
-        foreach f [glob -directory ${destroot}${prefix}/share/java/${name}/bin *.bat] {
+        foreach f [glob -directory ${mavendir}/bin *.bat] {
                 file delete $f
         }
         
         # Fix permissions on shell scripts
         foreach f { maven install_repo.sh } {
-                if [file exists ${destroot}${prefix}/share/java/${name}/bin/$f] {
-                        file attributes ${destroot}${prefix}/share/java/${name}/bin/$f -permissions +x
+                if [file exists ${mavendir}/bin/$f] {
+                        file attributes ${mavendir}/bin/$f -permissions +x
                 }
         }
 
         # Reduce the permissions on the distribution files.
-        file attributes ${destroot}${prefix}/share/java/${name}/conf -permissions 0755
-        file attributes ${destroot}${prefix}/share/java/${name}/conf/settings.xml -permissions 0644
-        foreach f [glob -directory ${destroot}${prefix}/share/java/${name}/lib *.jar] {
+        file attributes ${mavendir}/conf -permissions 0755
+        file attributes ${mavendir}/conf/settings.xml -permissions 0644
+        foreach f [glob -directory ${mavendir}/lib *.jar] {
                 file attributes $f -permissions 0644
         }
         
