Reduce permissions on some files and directories.  Partially resolves #25656.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72310 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/java/maven3/Portfile
+++ b/dports/java/maven3/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            maven3
 version         3.0
+revision        1
 
 categories      java devel
 maintainers     blair kickstyle.net:gk5885
@@ -65,6 +66,16 @@ destroot {
                 if [file exists ${destroot}${prefix}/share/java/${name}/bin/$f] {
                         file attributes ${destroot}${prefix}/share/java/${name}/bin/$f -permissions +x
                 }
+        }
+
+        # Reduce the permissions on the distribution files.
+        file attributes ${destroot}${prefix}/share/java/${name}/conf -permissions 0755
+        file attributes ${destroot}${prefix}/share/java/${name}/conf/settings.xml -permissions 0644
+        foreach f [glob -directory ${destroot}${prefix}/share/java/${name}/boot *.jar] {
+                file attributes $f -permissions 0644
+        }
+        foreach f [glob -directory ${destroot}${prefix}/share/java/${name}/lib *.jar] {
+                file attributes $f -permissions 0644
         }
         
         # Symlink maven into the bin directory
