edbrowse: update version, add missing dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@72312 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/edbrowse/Portfile
+++ b/dports/www/edbrowse/Portfile
@@ -4,8 +4,7 @@
 PortSystem          1.0
 
 name                edbrowse
-version             3.4.4
-revision        1
+version             3.4.5
 categories          www
 license             GPL
 maintainers         snc email.uc.edu:obrienj
@@ -29,14 +28,14 @@ platforms           darwin freebsd
 depends_lib         port:pcre \
                     port:spidermonkey \
                     port:curl \
+                    port:readline \
                     port:openssl
 
 master_sites        ${homepage}
 use_zip             yes
 dist_subdir			${name}-1
-checksums           md5     1abe73a484a0b4cd0963cc7e9174c83d \
-                    sha1    180ac417442eba5a9fd2f431fde23d25c0526626 \
-                    rmd160  d22f14a5dd64dad3ca8d60b4ec3cd0fc234d5bfd
+checksums           md5     faaaacedac4d5733fb36a20054a22524 \
+                    sha1    e1a93ecba9f5d1e2afff8c419ffe5691b9a89b22
 
 worksrcdir          ${distname}/src
 
