--- a/dports/gnome/gthumb/Portfile
+++ b/dports/gnome/gthumb/Portfile
@@ -1,10 +1,10 @@
+# -*- coding: utf-8; mode: tcl; tab-width: 4; indent-tabs-mode: nil; c-basic-offset: 4 -*- vim:fenc=utf-8:ft=tcl:et:sw=4:ts=4:sts=4
 # $Id$
 
 PortSystem              1.0
 
 name                    gthumb
-version                 2.10.11
-revision                1
+version                 2.12.0
 set branch              [join [lrange [split ${version} .] 0 1] .]
 description             Image viewer and browser for the gnome desktop.
 long_description        ${description}
@@ -15,37 +15,43 @@ homepage                http://gthumb.sourceforge.net/
 master_sites            gnome:sources/gthumb/${branch}
 use_bzip2               yes
 
-checksums           md5     498c583800a05593f7493e8f27991c7d \
-                    sha1    a9c133f3a652249329da8b5be8ff08dfec0ded9f \
-                    rmd160  ceaef54c96cc6dbea23fe6c461d26b685b13778a
+checksums               md5     2911cd9b875efdfd554547176c59e309 \
+                        sha1    5e86d68f24bfe123ea89b2c20b617a5e36ee3ca1 \
+                        rmd160  603999152c560e50b2c910dcc47e9f126ab8900a
 
-depends_build \
-    port:gnome-doc-utils \
-    path:bin/perl:perl5 \
-    port:pkgconfig
+depends_build           port:gnome-doc-utils \
+                        port:intltool \
+                        port:pkgconfig
 
-depends_lib \
-    port:libgphoto2 \
-    port:avahi \
-    port:esound \
-    port:libgnome-keyring \
-    port:gnome-vfs \
-    port:howl \
-    port:libart_lgpl \
-    port:libexif \
-    port:libgnomeui \
-    port:libxslt \
-    port:popt
+depends_lib             port:gconf \
+                        port:gstreamer \
+                        port:libgnome-keyring \
+                        port:libsoup \
+                        port:libunique \
+                        port:clutter-gtk \
+                        port:exiv2 \
+                        port:libopenraw
 
-configure.args          --disable-scrollkeeper
-configure.cflags-append -flat_namespace \
-                        -undefined suppress
+patchfiles              patch-gthumb-make-header.sh.diff
+
+configure.args          --enable-libopenraw \
+                        --disable-scrollkeeper \
+                        --disable-schemas-install \
+                        --disable-silent-rules
+
+#
+# libopenraw is not universal
+#
+
+universal_variant no
 
 post-activate {
     system "scrollkeeper-update"
     system "gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
+    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+        gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
 livecheck.type          regex
-livecheck.url           http://ftp.gnome.org/pub/GNOME/sources/gthumb/${branch}
+livecheck.url           http://ftp.gnome.org/pub/GNOME/sources/${name}/${branch}
 livecheck.regex         ${name}-(\[0-9.\]+)\\.tar
