libgda4: version bump to 4.2.0, drop configure option breaking build
git-svn-id: https://svn.macports.org/repository/macports/trunk@72315 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/libgda4/Portfile
+++ b/dports/databases/libgda4/Portfile
@@ -6,7 +6,7 @@ PortSystem 1.0
 name		libgda4
 conflicts       libgda3
 set gname       libgda
-version		4.1.11
+version		4.2.0
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	GDA provides uniform access to diffent kinds of data sources.
 long_description	\
@@ -21,9 +21,9 @@ distname	libgda-${version}
 master_sites    gnome:sources/${gname}/${branch}/
 use_bzip2	yes
 
-checksums       md5     f7c31fbdbd7b312873bf5eb6778a8be3 \
-                sha1    41419c15eb646561f37c946cfe545c5dc36e4702 \
-                rmd160  da116defecfb60fdd8572fb243823614757f1206
+checksums           md5     4b00c2b61430b2a0ea00e0332d1e8ef4 \
+                    sha1    98da33580855525c927afcbdaea83625156ec206 \
+                    rmd160  fa284ee1bc98ff81fcd788c77fdd467fab861b63
 
 patchfiles      patch-configure.ac.diff
 
@@ -75,10 +75,11 @@ configure.args  --with-bdb=${prefix} \
                 --without-oracle \
                 --without-firebird \
                 --without-xbase \
-                --without-mdb \
                 --without-ldap \
                 --without-java \
                 --without-jni
+
+#                --without-mdb 
 
 use_parallel_build no
 
