pspp-devel: update version
git-svn-id: https://svn.macports.org/repository/macports/trunk@72316 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/math/pspp-devel/Portfile
+++ b/dports/math/pspp-devel/Portfile
@@ -4,10 +4,10 @@
 PortSystem          1.0
 
 name                pspp-devel
-set buildstamp      20100907040503
-set buildhash       g805e7e
+set buildstamp      20101010040502
+set buildhash       gedfe2d
 version             0.7.5
-revision            15
+revision            16
 categories          math
 license             GPLv3+
 maintainers         snc
@@ -36,8 +36,8 @@ depends_lib		    port:gsl \
                     port:libglade2 \
                     port:libtool
 
-checksums           sha1    ba19209c823a21963e0ac1e34cecdffa31206d57 \
-                    rmd160  00264323a7f09b5b23f18f8f0bc98bccfb01fdff
+checksums           sha1    6380d7a7cb0739ba7bf2d09d40950f1a056c056c \
+                    rmd160  7a616e6278f3022c04ff144867a51d1940dbee09
 
 #configure.optflags  -O0
 #configure.cflags-append -g
