quvi: update to 0.2.5
git-svn-id: https://svn.macports.org/repository/macports/trunk@72317 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/quvi/Portfile
+++ b/dports/net/quvi/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                quvi
-version             0.2.4
+version             0.2.5
 categories          net www
 license             GPLv3
 maintainers         openmaintainer snc
@@ -17,7 +17,7 @@ long_description    ${name} is a command line tool for parsing video download \
 homepage            http://code.google.com/p/quvi/
 
 platforms           darwin
-use_autoreconf      yes
+depends_build       port:pkgconfig
 depends_lib         port:curl \
                     port:pcre \
                     port:libiconv \
@@ -25,7 +25,7 @@ depends_lib         port:curl \
 
 master_sites        googlecode
 use_bzip2           yes
-checksums           md5     cba129b7bb7149e87e1044e268eb63dd \
-                    sha1    e10d5b508a5a30b133af66fba175a401f04b6e86
+checksums           md5     835315974f8bc8d6ac48e857fdf640ea \
+                    sha1    0bfc74562b10b4a901c7d46ce8c8a7d754599862
 
 configure.cppflags  -I${worksrcpath}/include -I${prefix}/include
