eiffelstudio6[4-5]: Added missing dependency
git-svn-id: https://svn.macports.org/repository/macports/trunk@72319 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/eiffelstudio65/Portfile
+++ b/dports/lang/eiffelstudio65/Portfile
@@ -23,7 +23,8 @@ master_sites      sourceforge:eiffelstudio:source \
                   http://download.origo.ethz.ch/eiffelstudio/1540/:source \
                   http://n.ethz.ch/student/roederja/download/:launcher \
                   http://www.jann-roeder.net/download/:launcher
-depends_lib       port:gtk2
+depends_lib       port:gtk2 \
+                  port:xorg-libXtst
 depends_build     bin:bzip2:bzip2
 extract.suffix    .tar
 extract.cmd       tar
