--- a/dports/lang/eiffelstudio66/Portfile
+++ b/dports/lang/eiffelstudio66/Portfile
@@ -24,7 +24,8 @@ master_sites      sourceforge:eiffelstudio:source \
                   ftp://beta:beta57@ftp.eiffel.com/:source \
                   http://n.ethz.ch/student/roederja/download/:launcher \
                   http://www.jann-roeder.net/download/:launcher
-depends_lib       port:gtk2
+depends_lib       port:gtk2 \
+                  port:xorg-libXtst
 depends_build     bin:bzip2:bzip2
 extract.suffix    .tar
 extract.cmd       tar
