various ports: ensure that ports that install hicolor icons also update the icon cache in post-activate, increment revision.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72322 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/databases/libgda4/Portfile
+++ b/dports/databases/libgda4/Portfile
@@ -7,6 +7,7 @@ name		libgda4
 conflicts       libgda3
 set gname       libgda
 version		4.2.0
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	GDA provides uniform access to diffent kinds of data sources.
 long_description	\
@@ -21,9 +22,9 @@ distname	libgda-${version}
 master_sites    gnome:sources/${gname}/${branch}/
 use_bzip2	yes
 
-checksums           md5     4b00c2b61430b2a0ea00e0332d1e8ef4 \
-                    sha1    98da33580855525c927afcbdaea83625156ec206 \
-                    rmd160  fa284ee1bc98ff81fcd788c77fdd467fab861b63
+checksums       md5     4b00c2b61430b2a0ea00e0332d1e8ef4 \
+                sha1    98da33580855525c927afcbdaea83625156ec206 \
+                rmd160  fa284ee1bc98ff81fcd788c77fdd467fab861b63
 
 patchfiles      patch-configure.ac.diff
 
@@ -79,7 +80,7 @@ configure.args  --with-bdb=${prefix} \
                 --without-java \
                 --without-jni
 
-#                --without-mdb 
+#                --without-mdb
 
 use_parallel_build no
 
@@ -121,6 +122,10 @@ variant without_bdb \
     description {remove support for Berkeley DB} {
 	configure.args-delete   --with-bdb=${prefix}
 	configure.args-append	--without-bdb
+}
+
+post-activate {
+    system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
 }
 
 livecheck.type		regex
