--- a/dports/devel/glade3/Portfile
+++ b/dports/devel/glade3/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            glade3
 version         3.6.7
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Glade is a free user interface builder for GTK+ and GNOME.
 long_description    Glade is a free user interface builder for GTK+ \
@@ -62,6 +63,10 @@ variant python26 conflicts python25 description {Use Python 2.6} {
 
 if {![variant_isset python25]} {
     default_variants +python26
+}
+
+post-activate {
+        system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
 }
 
 livecheck.type  regex
