--- a/dports/gnome/alacarte/Portfile
+++ b/dports/gnome/alacarte/Portfile
@@ -6,6 +6,7 @@ PortSystem 1.0
 name            alacarte
 version         0.13.2
 epoch           1
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     A simple freedesktop.org compliant menu editor for use with GNOME
 
@@ -43,6 +44,10 @@ universal_variant no
 
 post-destroot {
     file rename ${destroot}${prefix}/bin/alacarte.py ${destroot}${prefix}/bin/alacarte
+}
+
+post-activate {
+    system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
 }
 
 livecheck.type  regex
