--- a/dports/gnome/dia/Portfile
+++ b/dports/gnome/dia/Portfile
@@ -6,6 +6,7 @@ PortGroup       archcheck 1.0
 
 name            dia
 version         0.97.1
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     nox openmaintainer
 categories      gnome graphics
@@ -69,6 +70,10 @@ configure.args \
     --with-cairo \
     --disable-libemf \
     --with-xslt-prefix=${prefix}
+
+post-activate {
+    system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
+}
 
 livecheck.type  regex
 livecheck.url   http://ftp.gnome.org/pub/gnome/sources/${name}/${branch}/
