--- a/dports/gnome/gnucash/Portfile
+++ b/dports/gnome/gnucash/Portfile
@@ -5,7 +5,7 @@ PortSystem        1.0
 
 name              gnucash
 version           2.2.9
-revision          6
+revision          7
 categories        gnome x11
 maintainers       nomaintainer
 platforms         darwin
@@ -121,6 +121,8 @@ post-activate {
     if {[file exists ${gnucash_register_schema}]} {
         system "${gnucash_register_schema}"
     }
+
+    system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
 
     if {[variant_isset no_x11]} {
         ui_warn "When you run gnucash, if it pops up a window saying:"
