--- a/dports/graphics/gimp2/Portfile
+++ b/dports/graphics/gimp2/Portfile
@@ -7,6 +7,7 @@ name            gimp2
 conflicts       gimp2-devel
 # please remember to update the gimp metapackage to match
 version         2.6.11
+revision        1
 categories      graphics
 maintainers     devans
 homepage        http://www.gimp.org/
@@ -147,6 +148,10 @@ variant no_x11 {
                 --x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib
     configure.args-append --without-x
+}
+
+post-activate {
+        system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
 }
 
 livecheck.type  regex
