--- a/dports/graphics/inkscape/Portfile
+++ b/dports/graphics/inkscape/Portfile
@@ -6,6 +6,7 @@ PortSystem 1.0
 name            inkscape
 conflicts       inkscape-devel
 version         0.48.0
+revision        1
 license         GPLv2
 maintainers     devans
 categories      graphics gnome
@@ -88,6 +89,10 @@ post-patch {
         reinplace "s|\"python-interpreter\", \"python\"|\"python-interpreter\", \"python2.6\"|g" ${worksrcpath}/src/extension/implementation/script.cpp
         reinplace "s|^#include \"Object.h\"|#include \"${prefix}/include/poppler/Object.h\"|" ${worksrcpath}/src/extension/internal/pdfinput/pdf-parser.h
         reinplace "s|^#include \"Object.h\"|#include \"${prefix}/include/poppler/Object.h\"|" ${worksrcpath}/src/extension/internal/pdfinput/pdf-parser.cpp
+}
+
+post-activate {
+        system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
 }
 
 livecheck.type          regex
