--- a/dports/gnome/anjuta/Portfile
+++ b/dports/gnome/anjuta/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            anjuta
 version         2.30.2.1
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     A GNOME/GTK IDE
 long_description        ${description}
@@ -69,6 +70,7 @@ variant subversion description {Enable subversion plugin support} {
 
 post-activate {
         system "scrollkeeper-update"
+        system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
         system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
              gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
