--- a/dports/gnome/bug-buddy/Portfile
+++ b/dports/gnome/bug-buddy/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		bug-buddy
 version		2.30.0
+revision        1
 set branch  [join [lrange [split ${version} .] 0 1] .]
 description	A graphical bug reporting tool.
 long_description        This is a graphical bug reporting tool. It can \
@@ -52,6 +53,7 @@ variant eds_mail description {Enable getting user email from evolution data serv
 
 post-activate {
 	system "${prefix}/bin/scrollkeeper-update"
+        system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
         system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
             gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
