--- a/dports/gnome/devhelp/Portfile
+++ b/dports/gnome/devhelp/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            devhelp
 version         2.30.1
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Devhelp is an API documentation browser for GTK+ and GNOME.
 long_description \
@@ -43,6 +44,7 @@ configure.python ${prefix}/bin/python2.6
 universal_variant no
 
 post-activate {
+        system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
         system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
             gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
