--- a/dports/gnome/eog/Portfile
+++ b/dports/gnome/eog/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		eog
 version		2.30.2
+revision        1
 set branch	[join [lrange [split ${version} .] 0 1] .]
 description	An image viewing program.
 long_description        This is the Eye of Gnome, an image viewer program. \
@@ -54,6 +55,7 @@ universal_variant no
 
 post-activate {
    system "scrollkeeper-update"
+   system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
