--- a/dports/gnome/gconf-editor/Portfile
+++ b/dports/gnome/gconf-editor/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		gconf-editor
 version		2.30.0
+revision        1
 set branch	[join [lrange [split ${version} .] 0 1] .]
 description	gconf-editor is a gconf database editor for GNOME 2.0.
 long_description        gconf-editor is a gconf database editor for \
@@ -39,6 +40,7 @@ post-destroot {
 
 post-activate {
    system "scrollkeeper-update"
+   system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
