--- a/dports/gnome/gdm/Portfile
+++ b/dports/gnome/gdm/Portfile
@@ -8,6 +8,7 @@ PortSystem	1.0
 
 name		gdm
 version		2.30.5
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	The Gnome Display Manager is a re-implementation of the well known xdm program.
 long_description	\
@@ -86,6 +87,7 @@ pre-activate {
 
 post-activate {
 	system "scrollkeeper-update"
+        system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
         system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
            gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
         system "${prefix}/bin/update-desktop-database -q ${prefix}/share/applications; true"
