--- a/dports/gnome/gnome-applets/Portfile
+++ b/dports/gnome/gnome-applets/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name            gnome-applets
 version         2.30.0
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     GNOME panel applets.
 long_description This package contains applets for use with the \
@@ -63,6 +64,7 @@ universal_variant no
 
 post-activate {
    system "scrollkeeper-update"
+   system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
