--- a/dports/gnome/gnome-mag/Portfile
+++ b/dports/gnome/gnome-mag/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		gnome-mag
 version         0.16.2
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	GNOME magnifier.
 long_description       ${description}
@@ -47,6 +48,7 @@ variant colorblind description {Enable building of colorblind applet} {
 
 post-activate {
         system "${prefix}/bin/update-desktop-database -q ${prefix}/share/applications; true"
+        system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
         system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
             gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
