--- a/dports/gnome/gnome-media/Portfile
+++ b/dports/gnome/gnome-media/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            gnome-media
 version         2.30.0
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     A collection of utilities for simple multimedia handling.
 long_description	\
@@ -43,6 +44,7 @@ variant deprecated description {Enable deprecated functionality} {
 
 post-activate {
     system "${prefix}/bin/scrollkeeper-update"
+    system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
     system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
