--- a/dports/gnome/gnome-netstatus/Portfile
+++ b/dports/gnome/gnome-netstatus/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		gnome-netstatus
 version		2.28.2
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	The GNOME Network Monitor Applet
 long_description	\
@@ -39,6 +40,7 @@ universal_variant no
 
 post-activate {
    system "scrollkeeper-update"
+   system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
