--- a/dports/gnome/gnome-settings-daemon/Portfile
+++ b/dports/gnome/gnome-settings-daemon/Portfile
@@ -4,6 +4,7 @@ PortSystem 1.0
 
 name            gnome-settings-daemon
 version         2.30.2
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description     Gnome 2 settings daemon.
 long_description ${description}
@@ -42,6 +43,7 @@ configure.args  --x-includes=${prefix}/include \
 universal_variant no
 
 post-activate    {
+    system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
     system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
