--- a/dports/gnome/gnome-utils/Portfile
+++ b/dports/gnome/gnome-utils/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		gnome-utils
 version		2.30.0
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	GNOME utilities
 long_description Utilities for the GNOME 2.0 desktop.
@@ -47,6 +48,7 @@ universal_variant no
 
 post-activate	{
 	system "scrollkeeper-update"
+        system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
         system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
             gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
