--- a/dports/gnome/gnumeric/Portfile
+++ b/dports/gnome/gnumeric/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		gnumeric
 version		1.10.10
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	A spreadsheet with gnome support.
 long_description	${description}
@@ -38,6 +39,7 @@ configure.pkg_config_path ${python_framework}/lib/pkgconfig
 
 post-activate {
 	system "${prefix}/bin/scrollkeeper-update"
+        system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
         system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
             gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
