--- a/dports/gnome/nautilus/Portfile
+++ b/dports/gnome/nautilus/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		nautilus
 version		2.30.1
+revision        1
 set branch  [join [lrange [split ${version} .] 0 1] .]
 description	The GNOME filemanager
 long_description       	Nautilus is the official file manager for the \
@@ -54,6 +55,7 @@ universal_variant no
 
 post-activate {
     system "${prefix}/bin/update-desktop-database -q ${prefix}/share/applications; true"
+    system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
     system "${prefix}/bin/update-mime-database ${prefix}/share/mime; true"
     system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
