--- a/dports/gnome/seahorse-plugins/Portfile
+++ b/dports/gnome/seahorse-plugins/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		seahorse-plugins
 version		2.30.1
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	Seahorse plugins.
 long_description ${description}
@@ -40,6 +41,7 @@ configure.args  --disable-epiphany \
 universal_variant no
                 
 post-activate {
+    system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
     system "${prefix}/bin/update-mime-database ${prefix}/share/mime; true"
     system "${prefix}/bin/scrollkeeper-update"
     system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
