--- a/dports/gnome/seahorse/Portfile
+++ b/dports/gnome/seahorse/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name		seahorse
 version		2.30.1
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	Seahorse is a GNOME application for managing encryption keys.
 long_description \
@@ -40,6 +41,7 @@ configure.args  --disable-introspection \
 
 post-activate {
     system "${prefix}/bin/update-desktop-database -q ${prefix}/share/applications; true"
+    system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
     system "${prefix}/bin/update-mime-database ${prefix}/share/mime; true"
     system "${prefix}/bin/scrollkeeper-update"
     system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
