--- a/dports/gnome/totem/Portfile
+++ b/dports/gnome/totem/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            totem
 version         2.30.2
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      gnome
 maintainers     devans openmaintainer
@@ -87,6 +88,7 @@ post-destroot {
 
 post-activate {
     system "scrollkeeper-update"
+    system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
     system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
