webkit-gtk: add missing dependency on xorg-libXt, closes #24104.
git-svn-id: https://svn.macports.org/repository/macports/trunk@72323 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/webkit-gtk/Portfile
+++ b/dports/www/webkit-gtk/Portfile
@@ -31,7 +31,8 @@ depends_lib	\
 	port:libxslt \
 	port:sqlite3 \
         port:enchant \
-        port:gst-plugins-base
+        port:gst-plugins-base \
+        port:xorg-libXt
         
 depends_build	\
 	port:pkgconfig \
@@ -60,6 +61,7 @@ post-destroot {
 # see bug #24622
 variant quartz {
     configure.args-append    --with-font-backend=pango --with-target=quartz
+    depends_lib-delete port:xorg-libXt
     patchfiles-append  patch-quartz-WebCore-plugins-gtk-gtkxtbin.c.diff \
                        patch-quartz-WebCore-plugins-gtk-PluginViewGtk.cpp.diff
 }
