phpbb: update to 3.0.7-PL1, fix livecheck. #26778
git-svn-id: https://svn.macports.org/repository/macports/trunk@72325 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/www/phpbb/Portfile
+++ b/dports/www/phpbb/Portfile
@@ -4,7 +4,7 @@
 PortSystem          1.0
 
 name                phpbb
-version             3.0.5
+version             3.0.7-PL1
 categories          www php
 maintainers         snc openmaintainer
 description         A PHP-based bulletin board / discussion forum system
@@ -24,9 +24,8 @@ master_sites        sourceforge
 distname            phpBB-${version}
 use_bzip2           yes
 
-checksums           md5     734b8f9c2390d5cc8c971cfcb29da185 \
-                    sha1    0097f18eb6eacea49219ddd58b290d6b4c218629 \
-                    rmd160  99a54ad912353ff40fd115f02cfd921039ce66b9
+checksums           md5     67570654462c442c29080007c0af1e1b \
+                    sha1    13022ecdd7203c45f7c56d1b8f2fade3bf98672d
 
 variant mysql {
     depends_run-append  port:php5-mysql
@@ -50,4 +49,5 @@ destroot {
             ${docpath}/phpbb/config.php-dist
 }
 
-livecheck.regex     phpBB (\\d+\\.\\d+(\\.\\d+)?) released
+livecheck.url       http://www.phpbb.com/
+livecheck.regex     version">(\\d+(\\.\\d+)+(-PL\\d+)?)
