--- a/dports/devel/ncursesw/Portfile
+++ b/dports/devel/ncursesw/Portfile
@@ -7,7 +7,7 @@ name			ncursesw
 version			5.7
 categories		devel
 platforms		darwin freebsd
-maintainers		nomaintainer
+maintainers		jmr openmaintainer
 description		emulation of curses in System V Release 4.0
 long_description	The Ncurses (new curses) library is a free software \
 				emulation of curses in System V Release 4.0, and more. It uses \
