bashdb: Remove sha256 checksum, after problems encountered with 1.9.1
git-svn-id: https://svn.macports.org/repository/macports/trunk@72328 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/bashdb/Portfile
+++ b/dports/devel/bashdb/Portfile
@@ -22,8 +22,7 @@ master_sites    sourceforge
 
 checksums       md5     547aa128875127f2bbd5d564cbb10ff1 \
                 sha1    339f5d697c97563cf11bd5c416ebb804a1e9b293 \
-                rmd160  cc7ba773567b313bd8c9f393a9eb4feedb585deb \
-                sha256  ed92cd88f23b2f644e2c19cc6807d42181d42d8714b7e4a4cb15cb5158742322
+                rmd160  cc7ba773567b313bd8c9f393a9eb4feedb585deb
 
 depends_lib     port:bash
 
