py26-dulwich: update to 0.6.1; see #26796 (maintainer timeout)
git-svn-id: https://svn.macports.org/repository/macports/trunk@72329 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/python/py26-dulwich/Portfile
+++ b/dports/python/py26-dulwich/Portfile
@@ -5,7 +5,7 @@ PortSystem          1.0
 PortGroup           python26 1.0
 
 name                py26-dulwich
-version             0.4.1
+version             0.6.1
 categories          python devel
 maintainers         yahoo.com.au:mail_ben_schmidt
 description         Pure-Python Git Library
@@ -17,8 +17,9 @@ homepage            http://samba.org/~jelmer/dulwich/
 platforms           darwin
 master_sites        ${homepage}
 distname            dulwich-${version}
-checksums           md5 ffa4b48682f43f47dcf70968cfc45133 \
-                    sha1 2c19314ff010579102d55d82326aa4e399ac6dfa \
-                    rmd160 f6a62acd0f7e91fbb03a115443975e3095f3854e
+
+checksums           sha1    70c8955857bfda625969b3ee8e9105a4fa6a118d \
+                    rmd160  4b2abef398616b1ed6f62ce0613bc3cd77e5e96a
+
 build.target-append build_ext
 build.args          --inplace
